# hdf5Lib

./: LICENSE  README.md  hdf5Lib.py  pyproject.toml  setup.cfg  setup.py
examples/: tutorial.ipynb
examples/single_file/: file.hdf5
examples/split_files/: subfile_00.hdf5  subfile_01.hdf5  subfile_02.hdf5  subfile_03.hdf5  subfile_04.hdf5  subfile_05.hdf5  subfile_06.hdf5  subfile_07.hdf5  subfile_08.hdf5  subfile_09.hdf5  subfile_10.hdf5  subfile_11.hdf5  subfile_12.hdf5  subfile_13.hdf5  subfile_14.hdf5  subfile_15.hdf5  subfile_16.hdf5  subfile_17.hdf5  subfile_18.hdf5  subfile_19.hdf5  subfile_20.hdf5  subfile_21.hdf5  subfile_22.hdf5  subfile_23.hdf5  subfile_24.hdf5  subfile_25.hdf5  subfile_26.hdf5  subfile_27.hdf5  subfile_28.hdf5  subfile_29.hdf5  subfile_30.hdf5  subfile_31.hdf5  subfile_32.hdf5  subfile_33.hdf5  subfile_34.hdf5  subfile_35.hdf5  subfile_36.hdf5  subfile_37.hdf5  subfile_38.hdf5  subfile_39.hdf5  (+10 more)
hdf5Lib/: hdf5Lib.py
src/: hdf5Lib.py
src/hdf5Lib/: __init__.py  hdf5Lib.py
src/tests/: test_read_hdf5.py
tests/: test_read_hdf5.py
